Connection https://localhost:7085 olarak değiştir. Azure bağlantısını iptal et.

--- a/HRPersonnelSystem.API/appsettings.json
+++ b/HRPersonnelSystem.API/appsettings.json
@@ -11,8 +11,8 @@
   },
   "Jwt": {
     "Key": "BilgeAdamBoostOnline4",
-    "Issuer": "https://hrmanagementsystemapi.azurewebsites.net",
-    "Audience": "https://hrmanagementsystemapi.azurewebsites.net",
+    "Issuer": "https://localhost:7085",
+    "Audience": "https://localhost:7085",
     "DurationInMinutes": 60
   }
 }
